--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -265,28 +265,17 @@ jobs:
           
           # 추가 안전 대기
           sleep 30
-          
-      - name: Debug network and RDS connectivity
-        run: |
-          COMMAND_ID=$(aws ssm send-command \
-            --instance-ids ${{ needs.deploy-infrastructure.outputs.ec2-id-1 }} \
-            --document-name "AWS-RunShellScript" \
-            --parameters 'commands=["echo === Network Test ===","ping -c 3 8.8.8.8","echo === RDS Endpoint Test ===","nc -zv ${{ needs.deploy-infrastructure.outputs.db-endpoint }} 3306","echo === Security Group Test ===","curl -I https://ssm.ap-northeast-2.amazonaws.com"]' \
-            --query 'Command.CommandId' --output text)
-          
-          aws ssm wait command-executed --command-id $COMMAND_ID --instance-id ${{ needs.deploy-infrastructure.outputs.ec2-id-1 }}
-          aws ssm get-command-invocation --command-id $COMMAND_ID --instance-id ${{ needs.deploy-infrastructure.outputs.ec2-id-1 }}
-
 
       - name: Setup MySQL client and create database
         run: |
           COMMAND_ID=$(aws ssm send-command \
             --instance-ids ${{ needs.deploy-infrastructure.outputs.ec2-id-1 }} \
             --document-name "AWS-RunShellScript" \
-            --parameters 'commands=["sudo yum install -y mysql","mysql -h ${{ needs.deploy-infrastructure.outputs.db-endpoint }} -u ${{ secrets.DB_USERNAME }} -p${{ secrets.DB_PASSWORD }} -e \"CREATE DATABASE IF NOT EXISTS voting_db;\""]' \
+            --parameters 'commands=["echo Installing MySQL client...","sudo yum install -y mysql","echo Testing MySQL connection...","mysql -h ${{ needs.deploy-infrastructure.outputs.db-endpoint }} -u ${{ secrets.DB_USERNAME }} -p${{ secrets.DB_PASSWORD }} -e \"SELECT 1;\" || echo \"MySQL connection failed - check credentials or RDS status\"","echo Creating database...","mysql -h ${{ needs.deploy-infrastructure.outputs.db-endpoint }} -u ${{ secrets.DB_USERNAME }} -p${{ secrets.DB_PASSWORD }} -e \"CREATE DATABASE IF NOT EXISTS voting_db;\""]' \
             --query 'Command.CommandId' --output text)
           
           aws ssm wait command-executed --command-id $COMMAND_ID --instance-id ${{ needs.deploy-infrastructure.outputs.ec2-id-1 }}
+          aws ssm get-command-invocation --command-id $COMMAND_ID --instance-id ${{ needs.deploy-infrastructure.outputs.ec2-id-1 }}
 
       - name: Wait for EC2 instances to be ready
         run: |
