--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -25,15 +25,16 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-
+    
     // Database
     runtimeOnly 'com.h2database:h2' // 개발용
     runtimeOnly 'org.postgresql:postgresql' // 프로덕션용
-
+    runtimeOnly 'com.mysql:mysql-connector-j' // MySQL용 추가
+    
     // Lombok
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
-
+    
     // Test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
