--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -285,9 +285,9 @@ jobs:
           COMMAND_ID=$(aws ssm send-command \
             --instance-ids ${{ needs.deploy-infrastructure.outputs.ec2-id-1 }} \
             --document-name "AWS-RunShellScript" \
-            --parameters 'commands=["echo Installing MySQL client...","sudo yum install -y mysql","echo Testing MySQL connection...","mysql -h ${{ needs.deploy-infrastructure.outputs.db-endpoint }} -u ${{ secrets.DB_USERNAME }} -p${{ secrets.DB_PASSWORD }} -e \"SELECT 1;\" || echo \"MySQL connection failed - check credentials or RDS status\"","echo Creating database...","mysql -h ${{ needs.deploy-infrastructure.outputs.db-endpoint }} -u ${{ secrets.DB_USERNAME }} -p${{ secrets.DB_PASSWORD }} -e \"CREATE DATABASE IF NOT EXISTS voting_db;\""]' \
+            --parameters 'commands=["sudo yum install -y mysql","echo Testing old password...","mysql -h ${{ needs.deploy-infrastructure.outputs.db-endpoint }} -u admin -padmin1234 -e \"SELECT 1;\" && echo \"OLD PASSWORD WORKS\" || echo \"OLD PASSWORD FAILED\"","echo Testing new password...","mysql -h ${{ needs.deploy-infrastructure.outputs.db-endpoint }} -u ${{ secrets.DB_USERNAME }} -p${{ secrets.DB_PASSWORD }} -e \"SELECT 1;\" && echo \"NEW PASSWORD WORKS\" || echo \"NEW PASSWORD FAILED\""]' \
             --query 'Command.CommandId' --output text)
-          
+            
           aws ssm wait command-executed --command-id $COMMAND_ID --instance-id ${{ needs.deploy-infrastructure.outputs.ec2-id-1 }}
           aws ssm get-command-invocation --command-id $COMMAND_ID --instance-id ${{ needs.deploy-infrastructure.outputs.ec2-id-1 }}
 
