--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -285,7 +285,8 @@ jobs:
           COMMAND_ID=$(aws ssm send-command \
             --instance-ids ${{ needs.deploy-infrastructure.outputs.ec2-id-1 }} \
             --document-name "AWS-RunShellScript" \
-            --parameters 'commands=["sudo dnf install -y https://repo.mysql.com/mysql80-community-release-el9-1.noarch.rpm","sudo dnf -y install mysql-community-client","mysql --version","mysql -h ${{ needs.deploy-infrastructure.outputs.db-endpoint }} -P 3306 -u admin -padmin1234 -e \"SELECT 1;\"","mysql -h ${{ needs.deploy-infrastructure.outputs.db-endpoint }} -P 3306 -u ${{ secrets.DB_USERNAME }} -p${{ secrets.DB_PASSWORD }} -e \"SELECT 1;\""]' 
+            --parameters 'commands=["sudo dnf install -y https://repo.mysql.com/mysql80-community-release-el9-1.noarch.rpm","sudo dnf -y install mysql-community-client","mysql --version","mysql -h ${{ needs.deploy-infrastructure.outputs.db-endpoint }} -P 3306 -u admin -padmin1234 -e \"SHOW DATABASES;\"","mysql -h ${{ needs.deploy-infrastructure.outputs.db-endpoint }} -P 3306 -u ${{ secrets.DB_USERNAME }} -p${{ secrets.DB_PASSWORD }} -e \"SHOW DATABASES;\""]' \
+            --query 'Command.CommandId' --output text)
             
             aws ssm wait command-executed --command-id $COMMAND_ID --instance-id ${{ needs.deploy-infrastructure.outputs.ec2-id-1 }}
             aws ssm get-command-invocation --command-id $COMMAND_ID --instance-id ${{ needs.deploy-infrastructure.outputs.ec2-id-1 }}
