--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -280,12 +280,35 @@ jobs:
           # 추가 안전 대기
           sleep 30
 
-      - name: Setup MySQL client and create database
+      - name: Install MySQL repository
         run: |
           COMMAND_ID=$(aws ssm send-command \
             --instance-ids ${{ needs.deploy-infrastructure.outputs.ec2-id-1 }} \
             --document-name "AWS-RunShellScript" \
-            --parameters 'commands=["sudo dnf install -y https://repo.mysql.com/mysql80-community-release-el9-1.noarch.rpm","sudo dnf -y install mysql-community-client --nogpgcheck","mysql --version","mysql -h ${{ needs.deploy-infrastructure.outputs.db-endpoint }} -P 3306 -u admin -padmin1234 -e \"SHOW DATABASES;\"","mysql -h ${{ needs.deploy-infrastructure.outputs.db-endpoint }} -P 3306 -u ${{ secrets.DB_USERNAME }} -p${{ secrets.DB_PASSWORD }} -e \"SHOW DATABASES;\""]'
+            --parameters 'commands=["sudo dnf install -y https://repo.mysql.com/mysql80-community-release-el9-1.noarch.rpm"]' \
+            --query 'Command.CommandId' --output text)
+          
+          aws ssm wait command-executed --command-id $COMMAND_ID --instance-id ${{ needs.deploy-infrastructure.outputs.ec2-id-1 }}
+          aws ssm get-command-invocation --command-id $COMMAND_ID --instance-id ${{ needs.deploy-infrastructure.outputs.ec2-id-1 }}
+
+      - name: Install MySQL client
+        run: |
+          COMMAND_ID=$(aws ssm send-command \
+            --instance-ids ${{ needs.deploy-infrastructure.outputs.ec2-id-1 }} \
+            --document-name "AWS-RunShellScript" \
+            --parameters 'commands=["sudo dnf -y install mysql-community-client --nogpgcheck","mysql --version"]' \
+            --query 'Command.CommandId' --output text)
+          
+          aws ssm wait command-executed --command-id $COMMAND_ID --instance-id ${{ needs.deploy-infrastructure.outputs.ec2-id-1 }}
+          aws ssm get-command-invocation --command-id $COMMAND_ID --instance-id ${{ needs.deploy-infrastructure.outputs.ec2-id-1 }}
+
+      - name: Test database connections and create database
+        run: |
+          COMMAND_ID=$(aws ssm send-command \
+            --instance-ids ${{ needs.deploy-infrastructure.outputs.ec2-id-1 }} \
+            --document-name "AWS-RunShellScript" \
+            --parameters 'commands=["mysql -h ${{ needs.deploy-infrastructure.outputs.db-endpoint }} -P 3306 -u admin -padmin1234 -e \"SHOW DATABASES;\" && echo OLD_PASSWORD_WORKS || echo OLD_PASSWORD_FAILED","mysql -h ${{ needs.deploy-infrastructure.outputs.db-endpoint }} -P 3306 -u ${{ secrets.DB_USERNAME }} -p${{ secrets.DB_PASSWORD }} -e \"SHOW DATABASES;\" && echo NEW_PASSWORD_WORKS || echo NEW_PASSWORD_FAILED","mysql -h ${{ needs.deploy-infrastructure.outputs.db-endpoint }} -P 3306 -u ${{ secrets.DB_USERNAME }} -p${{ secrets.DB_PASSWORD }} -e \"CREATE DATABASE IF NOT EXISTS voting_db;\""]' \
+            --query 'Command.CommandId' --output text)
           
           aws ssm wait command-executed --command-id $COMMAND_ID --instance-id ${{ needs.deploy-infrastructure.outputs.ec2-id-1 }}
           aws ssm get-command-invocation --command-id $COMMAND_ID --instance-id ${{ needs.deploy-infrastructure.outputs.ec2-id-1 }}
@@ -542,4 +565,4 @@ jobs:
           echo "- 인프라: ${{ needs.deploy-infrastructure.result }}"
           echo "- 서버설정: ${{ needs.setup-servers.result }}"  
           echo "- 백엔드: ${{ needs.deploy-backend.result }}"
-          echo "- 프론트엔드: ${{ needs.deploy-frontend.result }}"
+          echo "- 프론트엔드: ${{ needs.deploy-infrastructure.result }}"
