--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -128,6 +128,9 @@ jobs:
               -target=aws_iam_role.ec2_role \
               -target=aws_iam_instance_profile.ec2_profile \
               -target=aws_iam_role_policy_attachment.ec2_ssm_policy \
+              -target=aws_vpc_endpoint.ssm \
+              -target=aws_vpc_endpoint.ssm_messages \
+              -target=aws_vpc_endpoint.ec2_messages \
               -no-color
           else
             echo "Full infrastructure deployment"
@@ -183,6 +186,9 @@ jobs:
               -target=aws_iam_role.ec2_role \
               -target=aws_iam_instance_profile.ec2_profile \
               -target=aws_iam_role_policy_attachment.ec2_ssm_policy \
+              -target=aws_vpc_endpoint.ssm \
+              -target=aws_vpc_endpoint.ssm_messages \
+              -target=aws_vpc_endpoint.ec2_messages \
               -auto-approve -no-color
           else
             echo "Applying full infrastructure"
