--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -286,6 +286,18 @@ jobs:
           # 추가 안전 대기
           sleep 60
 
+      - name: Debug EC2 User Data execution
+        run: |
+          echo "=== Debugging EC2 User Data execution ==="
+          COMMAND_ID=$(aws ssm send-command \
+            --instance-ids ${{ needs.deploy-infrastructure.outputs.ec2-id-1 }} \
+            --document-name "AWS-RunShellScript" \
+            --parameters 'commands=["echo === Home directory check ===", "ls -la /home/", "echo === Package managers ===", "which dnf || echo dnf not found", "which yum || echo yum not found", "echo === Cloud-init logs ===", "tail -30 /var/log/cloud-init-output.log", "echo === User check ===", "id ec2-user || echo ec2-user not found"]' \
+            --query 'Command.CommandId' --output text)
+          
+          aws ssm wait command-executed --command-id $COMMAND_ID --instance-id ${{ needs.deploy-infrastructure.outputs.ec2-id-1 }}
+          aws ssm get-command-invocation --command-id $COMMAND_ID --instance-id ${{ needs.deploy-infrastructure.outputs.ec2-id-1 }}
+
       - name: Install MySQL repository
         run: |
           COMMAND_ID=$(aws ssm send-command \
