워크플로우에서 db설정 삭제후 앤서블로 이관

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -231,7 +231,7 @@ jobs:
             echo "cloudfront-url=$CLOUDFRONT_URL" >> $GITHUB_OUTPUT
           fi
 
-  # 서버 설정 (Ansible + SSM)
+  # 서버 설정 (Ansible + SSM) - MySQL 설치 제거하고 Ansible로 처리
   setup-servers:
     needs: [detect-changes, deploy-infrastructure]
     if: |
@@ -262,9 +262,13 @@ jobs:
       - name: Wait for EC2 instances to be ready for SSM
         run: |
           echo "Waiting for EC2 instances to be ready..."
+          
+          # EC2 인스턴스 상태 확인
+          echo "Checking EC2 instance state..."
           aws ec2 describe-instances --instance-ids ${{ needs.deploy-infrastructure.outputs.ec2-id-1 }} \
             --query 'Reservations[0].Instances[0].State.Name' --output text
           
+          # SSM 에이전트 상태 확인 (최대 5분 대기)
           for i in {1..30}; do
             SSM_STATUS=$(aws ssm describe-instance-information \
               --filters "Key=InstanceIds,Values=${{ needs.deploy-infrastructure.outputs.ec2-id-1 }}" \
@@ -278,58 +282,8 @@ jobs:
               sleep 10
             fi
           done
-          sleep 60
-
-      - name: Debug EC2 User Data execution
-        run: |
-          echo "=== Debugging EC2 User Data execution ==="
-          COMMAND_ID=$(aws ssm send-command \
-            --instance-ids ${{ needs.deploy-infrastructure.outputs.ec2-id-1 }} \
-            --document-name "AWS-RunShellScript" \
-            --parameters 'commands=["echo === Home directory check ===", "ls -la /home/", "echo === Package managers ===", "which dnf || echo dnf not found", "which yum || echo yum not found", "echo === Cloud-init logs ===", "tail -30 /var/log/cloud-init-output.log", "echo === User check ===", "id ec2-user || echo ec2-user not found"]' \
-            --query 'Command.CommandId' --output text)
           
-          aws ssm wait command-executed --command-id $COMMAND_ID --instance-id ${{ needs.deploy-infrastructure.outputs.ec2-id-1 }}
-          aws ssm get-command-invocation --command-id $COMMAND_ID --instance-id ${{ needs.deploy-infrastructure.outputs.ec2-id-1 }}
-
-      - name: Install MySQL-compatible client
-        run: |
-          COMMAND_ID=$(aws ssm send-command \
-            --instance-ids ${{ needs.deploy-infrastructure.outputs.ec2-id-1 }} \
-            --document-name "AWS-RunShellScript" \
-            --parameters 'commands=["echo === Removing MySQL repo (if exists) ===","sudo yum remove -y mysql80-community-release || true","echo === Installing MariaDB client ===","sudo yum -y install mariadb","mysql --version"]' \
-            --query 'Command.CommandId' --output text)
-
-          aws ssm wait command-executed --command-id $COMMAND_ID --instance-id ${{ needs.deploy-infrastructure.outputs.ec2-id-1 }}
-          aws ssm get-command-invocation --command-id $COMMAND_ID --instance-id ${{ needs.deploy-infrastructure.outputs.ec2-id-1 }}
-
-  
-
-      - name: Install MySQL client
-        run: |
-          COMMAND_ID=$(aws ssm send-command \
-            --instance-ids ${{ needs.deploy-infrastructure.outputs.ec2-id-1 }} \
-            --document-name "AWS-RunShellScript" \
-            --parameters 'commands=["sudo yum clean all","sudo yum -y install mysql-community-client --nogpgcheck","mysql --version"]' \
-            --query 'Command.CommandId' --output text)
-          
-          aws ssm wait command-executed --command-id $COMMAND_ID --instance-id ${{ needs.deploy-infrastructure.outputs.ec2-id-1 }}
-          aws ssm get-command-invocation --command-id $COMMAND_ID --instance-id ${{ needs.deploy-infrastructure.outputs.ec2-id-1 }}
-
-      - name: Test database connections and create database
-        run: |
-          COMMAND_ID=$(aws ssm send-command \
-            --instance-ids ${{ needs.deploy-infrastructure.outputs.ec2-id-1 }} \
-            --document-name "AWS-RunShellScript" \
-            --parameters 'commands=["mysql -h ${{ needs.deploy-infrastructure.outputs.db-endpoint }} -P 3306 -u admin -padmin1234 -e \"SHOW DATABASES;\" && echo OLD_PASSWORD_WORKS || echo OLD_PASSWORD_FAILED","mysql -h ${{ needs.deploy-infrastructure.outputs.db-endpoint }} -P 3306 -u ${{ secrets.DB_USERNAME }} -p${{ secrets.DB_PASSWORD }} -e \"SHOW DATABASES;\" && echo NEW_PASSWORD_WORKS || echo NEW_PASSWORD_FAILED","mysql -h ${{ needs.deploy-infrastructure.outputs.db-endpoint }} -P 3306 -u ${{ secrets.DB_USERNAME }} -p${{ secrets.DB_PASSWORD }} -e \"CREATE DATABASE IF NOT EXISTS voting_db;\""]' \
-            --query 'Command.CommandId' --output text)
-          
-          aws ssm wait command-executed --command-id $COMMAND_ID --instance-id ${{ needs.deploy-infrastructure.outputs.ec2-id-1 }}
-          aws ssm get-command-invocation --command-id $COMMAND_ID --instance-id ${{ needs.deploy-infrastructure.outputs.ec2-id-1 }}
-
-      - name: Wait for EC2 instances to be ready
-        run: |
-          echo "Waiting for EC2 instances to be ready for Ansible..."
+          # 추가 안전 대기
           sleep 60
 
       - name: Install Ansible SSM plugin
@@ -355,7 +309,7 @@ jobs:
         run: |
           ansible webservers -i inventory.ini -m ping -vvv
 
-      - name: Run Ansible setup playbook
+      - name: Run Ansible setup playbook (MySQL 설치 포함)
         working-directory: ./ansible
         run: |
           ansible-playbook -i inventory.ini playbooks/setup-service.yaml \
@@ -364,7 +318,6 @@ jobs:
             -e "db_password=${{ secrets.DB_PASSWORD }}" \
             -e "db_name=voting_db" \
             -v
-
 
   # 백엔드 빌드 및 배포 (Ansible + SSM)
   deploy-backend:
@@ -408,7 +361,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: Create application.yml
+      - name: Create application.yml template
         working-directory: ./ansible/templates
         run: |
           cat > application.yaml.j2 << EOF
@@ -462,6 +415,16 @@ jobs:
           ansible_aws_ssm_region=${{ env.AWS_REGION }}
           EOF
 
+      - name: Deploy configuration via Ansible
+        working-directory: ./ansible
+        run: |
+          ansible-playbook -i inventory.ini playbooks/db-config.yaml \
+            -e "rds_host=${{ needs.deploy-infrastructure.outputs.db-endpoint }}" \
+            -e "db_user=${{ secrets.DB_USERNAME }}" \
+            -e "db_password=${{ secrets.DB_PASSWORD }}" \
+            -e "db_name=voting_db" \
+            -v
+
       - name: Deploy JAR via Ansible
         working-directory: ./ansible
         run: |
@@ -469,11 +432,6 @@ jobs:
             -e "jar_file=files/app.jar" \
             -e "app_path=/opt/app" \
             -v
-
-      - name: Start application via Ansible
-        working-directory: ./ansible
-        run: |
-          ansible-playbook -i inventory.ini playbooks/start-app.yaml -v
 
       - name: Health check via ALB
         run: |
@@ -576,4 +534,4 @@ jobs:
           echo "- 인프라: ${{ needs.deploy-infrastructure.result }}"
           echo "- 서버설정: ${{ needs.setup-servers.result }}"  
           echo "- 백엔드: ${{ needs.deploy-backend.result }}"
-          echo "- 프론트엔드: ${{ needs.deploy-infrastructure.result }}"
+          echo "- 프론트엔드: ${{ needs.deploy-frontend.result }}"
