--- a/ansible/playbooks/java-setup.yaml
+++ b/ansible/playbooks/java-setup.yaml
@@ -12,6 +12,7 @@
       yum:
         name: java-17-amazon-corretto-devel
         state: present
+      become: yes
       when: 
         - java_check.rc != 0
         - ansible_distribution == "Amazon" and ansible_distribution_major_version == "2"
@@ -20,6 +21,7 @@
       dnf:
         name: java-17-amazon-corretto-devel
         state: present
+      become: yes
       when: 
         - java_check.rc != 0
         - ansible_distribution == "Amazon" and ansible_distribution_major_version == "2023"
